--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-dom": "latest"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
     "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0"
+    "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.23"
   }
 }
