--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/moment": "^2.13.1",
     "@emotion/cache": "latest",
     "@emotion/react": "latest",
     "@emotion/server": "latest",
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
+    "@mui/lab": "^5.0.0-alpha.72",
     "@mui/material": "latest",
+    "moment": "^2.29.1",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
