--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "latest",
     "@mui/lab": "^5.0.0-alpha.72",
     "@mui/material": "latest",
+    "intercept-stdout": "^0.1.2",
     "moment": "^2.29.1",
     "next": "latest",
     "react": "latest",
