--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "intercept-stdout": "^0.1.2",
     "moment": "^2.29.1",
     "next": "latest",
+    "prop-types": "^15.8.1",
     "react": "latest",
     "react-dom": "latest",
     "recoil": "latest",
